--- a/templates/planner4.html
+++ b/templates/planner4.html
@@ -34,7 +34,6 @@
         table {
             width: auto;
             margin-top: 20px;
-            text-align: center;
             /*column-rule: 4px dotted rgb(79, 185, 227);*/
         }
         th, td{
@@ -46,20 +45,6 @@
         button {
             margin-top: 5px;
             font-family: Raleway;
-            padding: 6px 14px;
-            border-radius: 6px;
-            color: #3D3D3D;
-            background: #fff;
-            border: 1px solid white;
-            box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-            transition-deration: 0.4s;
-        }
-        button:hover {
-            background-color: floralwhite;
-            border: 1px solid black;
         }
         label {
             font-family: Raleway;
@@ -77,20 +62,6 @@
         }
         input.text {
             font-family: Raleway;
-            border: 0;
-        }
-        input::placeholder {
-            color: gray;
-            padding-left: 10px;
-            font-size: small;
-            font-family: Raleway;
-        }
-        /*li {*/
-        /*    text-align: left;*/
-        /*}*/
-        ol {
-            margin-left: -40px;
-            list-style-position: inside;
         }
     </style>
     <title>Nighthawk Coding | Planner</title>
@@ -99,10 +70,6 @@
 <body onload="check()">
 {% include "layouts/navbar.html" %}
 <div style="margin-left: 50px; margin-right: 50px">
-    <div style="text-align: right" >
-        <p style="font-family: 'Courier New';">{{mytime['LocalTime_Now']}} // {{myweather['main']['temp']}}°F</p>
-    </div>
-
     <h1>PLANNER</h1>
     <p>This is the project's <i>WEEKLY</i> schedule - <b>a daily planner structured on a weekly basis.</b></p>
 
@@ -111,7 +78,7 @@
     <input type="checkbox" class="checkbox" id="color" onclick="display(id)">
     <label for="color">Use Colors?</label>
 
-    <table>
+    <table style="text-align: center">
         <tr>    <!-- tr is the table row and center aligns them  -->
             <th>Sunday</th>      <!-- The days and aligning in the center th is the table header  -->
             <th>Monday</th>
@@ -123,13 +90,12 @@
         </tr>
         <tr>
             {% for i in range(1, 8) %}
-            <td id="cell.{{i}}">
-                <ol id="show_input.{{i}}">
-                </ol>
-                <input placeholder="Task" type="text" class="text" id="task.{{i}}">
-                <button class="task" id="add_task.{{i}}" onclick="display('{{i}}')">Add Task</button>
+            <td id="cell{{i}}">
+                <p id="show_input{{i}}"></p>
+                <input type="text" class="text" id="task{{i}}">
+                <button onclick="display('{{i}}')">Add Task</button>
                 <br>
-                <button class="task" onclick="remove('{{i}}')">Clear Task(s)</button>
+                <button onclick="remove('{{i}}')">Clear Task</button>
             </td>
             {% endfor %}
         </tr>
@@ -142,89 +108,61 @@
     <iframe id="songs" src="about:blank" width="100%" height="280" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
     <script>
-        // converting string (task input) to hex
+        function colorChange(id) {
+            let cell = "cell" + id;
+            document.getElementById(cell).style.backgroundColor = conversion(id);
+        }
+
+        // converting string to hex
         function conversion(id) {
-            const task = "task." + id;
-            // const show_input = "show_input." + id;
+            const task = "task" + id;
             sessionStorage.setItem(task, document.getElementById(task).value);
             let text = sessionStorage.getItem(task);
             let short = text.slice(0,4) // slices long strings to just 4 characters
             let arr1 = [];
             for (let n = 0, l = short.length; n < l; n ++)
             {
-                let hex = Number(short.charCodeAt(n)).toString(16); // algorithm from stack overflow, thanks
+                let hex = Number(short.charCodeAt(n)).toString(16);
                 arr1.push(hex);
             }
             return "#" + arr1.join('')
         }
 
-        function colorChange(id) {
-            let cell = "cell." + id;
-            document.getElementById(cell).style.backgroundColor = conversion(id); // changes cell background color to the hex from conversion()
-        }
+        // changes cell background color to the hex from conversion()
+
 
         // displaying user input for their tasks
         function display(id) {
-            let task = "task." + id;
-            // let task2 = "task." + id;
-            const show_input = "show_input." + id;
-            sessionStorage.setItem(task, document.getElementById(task).value); // stores value in session
-            const TASK = sessionStorage.getItem(task) // a new variable for the list
-            const list = document.createElement('list')
-            list.innerHTML = "<li>" + TASK + "</li>"; // list
-            document.getElementById(show_input).appendChild(list); // adding to list
-            sessionStorage.setItem(show_input, document.getElementById(show_input).innerText)
-
+            const task = "task" + id;
+            const show_input = "show_input" + id
+            // trying to figure out web storage
+            sessionStorage.setItem(task, document.getElementById(task).value);
+            document.getElementById(show_input).innerHTML = sessionStorage.getItem(task);
             // whether or not checkbox is toggled, and uses color based on result
             let checked = document.getElementById("color").checked
             if ( checked ) {
                 colorChange(id)
             }
-            document.getElementById(task).value = null // clears input box, QOL update
         }
 
-        // enter key
-        for (let i = 1; i < 8; i++) {
-            const task = "task." + i;
-            const button = "add_task." + i;
-            document.getElementById(task)
-                .addEventListener("keyup", function (event) {
-                    event.preventDefault();
-                    if (event.keyCode === 13) { // maybe it's deprecated, but it works
-                        document.getElementById(button).click(); // button runs the display() code
-                    }
-                });
-        }
-
-        // checks stored web memory for tasks from a prev. session
         function check() {
             for (let i = 1; i < 8; i++) {
-                const task = "task." + i;
-                const show_input = "show_input." + i;
+                const task = "task" + i;
+                const show_input = "show_input" + i
                 if (typeof sessionStorage.getItem(task) !== null) {
-                    let str = sessionStorage.getItem(show_input);
-                    let tasks = "'"+str+"'".split(" ");
-                    for (let i = 0, i < tasks.length; i++ ) {
-                        const list = document.createElement('list')
-                        list.innerHTML = "<li>" + TASK + "</li>";
-                        document.getElementById(show_input).appendChild(list);
-                    }
+                    document.getElementById(show_input).innerHTML = sessionStorage.getItem(task);
                 }
-                // alert(str.match(/.*?[\.\s]+?/g))
             }
+            // if ( sessionStorage.color === true ) {
+            //     colorChange(id);
+            // }
         }
 
-        // clears task list and web storage
         function remove(id) {
-            const task = "task." + id;
-            const show_input = "show_input." + id;
-            let cell = "cell." + id;
+            const task = "task" + id;
+            const show_input = "show_input" + id
             sessionStorage.removeItem(task)
             document.getElementById(show_input).innerHTML = null;
-            if ( typeof document.getElementById(cell).style.backgroundColor !== null ) { // checking for color
-                document.getElementById(cell).style.backgroundColor = null
-            }
-
         }
 
         // all personal playlists (from Michael), can add more public one's in the future
