have good button layout, started daily planner

--- a/templates/weatherapi2.html
+++ b/templates/weatherapi2.html
@@ -78,8 +78,8 @@
 <div class="container"></div>
 <div class="row justify-content-md-center" style="text-align: center; width: 100%">
     <div class="col">
-        <a href="http://127.0.0.1:5000/experiment/" target="_blank" class="btn">Forecast (reached daily limit)</a>
-        <a href="http://127.0.0.1:5000/weatherapi/" target="_blank" class="btn">Forecast</a>
+        <a href="http://127.0.0.1:5000/experiment/" target="_blank" class="btn">Forecast</a>
+<!--        <a href="http://127.0.0.1:5000/weatherapi/" target="_blank" class="btn">Forecast</a>-->
         <a href="http://127.0.0.1:5000/planner3/" target="_blank" class="btn">Back To Planner</a>
     </div>
 </div>
