--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -25,6 +25,18 @@
         }
         body {
             background-color: antiquewhite;
+            color: black;
+        }
+
+        .dark-mode {
+            background-color: #35363a;
+            color: #b3b3b3;
+            border: 3px white;
+        }
+        .button {
+            background-color: #35363a;
+            color: #b3b3b3;
+            border: 3px white;
         }
         h1 {
             font-family: Forum;
@@ -36,7 +48,7 @@
             width: fit-content;
             overflow-wrap: anywhere;
             font-family: Raleway;
-            /*column-rule: 4px dotted rgb(79, 185, 227);*/
+
 
         }
         th, td{
@@ -138,53 +150,35 @@
              <td><span id="onlyrow"></span> </td>
         </tr>
     </table>
-<!--    <table>  &lt;!&ndash;  new table that is created for events &ndash;&gt;-->
-<!--        <tr>   &lt;!&ndash;  table header for 3 seperate events&ndash;&gt;-->
-<!--            <th bgcolor="#00bfff"> Birthday </th>-->
-<!--            <th bgcolor="red"> Urgent Task </th>-->
-<!--            <th bgcolor="yellow"> Exam in this month </th>-->
-<!--        </tr>-->
+<!--    <p id = "GOTOSTUDY" style ="font-size: 16px; font-weight: bold;">-->
+<!--    </p>-->
+    <button onclick="toggleEverything()">Toggle dark mode</button>
 
-<!--        {% for image in eventimages %} &lt;!&ndash;  for loop for iteration(image  &ndash;&gt;-->
-<!--            <td>-->
-<!--                <img class="img-responsive py-3" id=img{{loop.index}} alt="" width="256" height="Auto" src="{{image.base64_GRAY}}" > &lt;!&ndash;  default is gray   &ndash;&gt;-->
-<!--                &lt;!&ndash; Hack: create button (btn{{loop.index}} to  call java script function-->
-<!--                       pass index to allow you to toggle images with hidden id's-->
-<!--                       {{image.base64}}  original image-->
-<!--                       {{image.base64_GRAY}}  gray scale image-->
-<!--                    &ndash;&gt;-->
-<!--                <button style="background-color: mediumspringgreen; border-color: rebeccapurple; color: mediumblue" onclick="changeImage('{{loop.index}}')">Toggle Event!</button>-->
-<!--                &lt;!&ndash;  changes from gray to color when using button  &ndash;&gt;-->
-<!--                <p hidden id="img_orig{{loop.index}}">{{image.base64}}</p> &lt;!&ndash;  loops the images   &ndash;&gt;-->
-<!--                <p hidden id="img_gray{{loop.index}}">{{image.base64_GRAY}}</p>-->
-<!--            </td>-->
-<!--        {% endfor %}-->
-<!--    </table>-->
-<body>
-<p id = "GOTOSTUDY" style ="font-size: 16px; font-weight: bold;">
-</p>
-<div class="row justify-content-md-center" style="text-align: center; width: 100%">
-    <div class="col">
-<button onclick = "STUDYTIME()"class="btn btn-outline-secondary">
-    Enter...STUDY MODE!!!
-</button>
+    <button onclick = "RANDOMCOLOR()"class="btn btn-outline-secondary">
+        Test's Over? Have some fun!
+    </button>
 
-<button onclick = "RANDOMCOLOR()"class="btn btn-outline-danger">
-    Test's Over? Have some fun!
-</button>
-<div/>
-<p id = "RETURNTOFUN" style ="color:white; font-size: 20px; font-weight: bold;">
-</p>
-</body>
-
+<!--<p id = "RETURNTOFUN" style ="color:white; font-size: 20px; font-weight: bold;">-->
+<!--</p>-->
+    <div class="row" style="text-align: center; width: 100%">
+        <div class="col">
+            <a href="http://127.0.0.1:5000/binarytoplanner/" target="_blank" class="btn btn-secondary">
+                Want to take a quick break from studying and talk to your friends in binary? Click here!
+            </a>
+            <a href="http://127.0.0.1:5000/weatherapi2/" target="_blank" class="btn btn-secondary">
+                What to wear...
+            </a>
+        </div>
+    </div>
     <script>
 
 
         function display(id){
             const task = "task" + id;
             const show_input = "show_input" + id;
-            alert("Adding " + document.getElementById(task).value + " to October " + id);
-            document.getElementById(show_input).innerHTML = document.getElementById(task).value;
+            alert("Adding " + document.getElementById(task).value);
+            sessionStorage.setItem(task, document.getElementById(task).value);
+            document.getElementById(show_input).innerHTML = sessionStorage.getItem(task);
         }
 
         function reply_click(clicked_id)
@@ -225,19 +219,39 @@
 
         }
         function RANDOMCOLOR() {
-            var color = '#'+Math.floor(Math.random() * 16777215).toString(16);
-            changeColor(color)
+            let color = '#' + Math.floor(Math.random() * 16777215).toString(16);
+            changeColor(color);
+        }
+        function keep() {
+        // for (let j = 0; j < 5; j++) {
+        //     for (let i = 1; i < 8; i++) {
+        //         task = "task" + j;
+        //         task = task + i;
+        //         const show_input = "show_input" + j;
+            alert(sessionStorage.getItem(task));
+            if (typeof sessionStorage.getItem(task) != null) {
+                document.getElementById(show_input).innerHTML = sessionStorage.getItem(task);
+            }
+
+
+        }
+        function remove(id) {
+            const task = "task" + id;
+            const show_input = "show_input" + id
+            sessionStorage.removeItem(task)
+            document.getElementById(show_input).innerHTML = null;
+        }
+        function toggleMode() {
+            var element = document.body;
+            element.classList.toggle("dark-mode");
+        }
+        function toggleButt() {
+            var element = document.body;
+            element.classList.toggle("button");
+        }
+        function toggleEverything() {
+            toggleMode();
+            toggleButt();
         }
 
-
     </script>
-    <div class="row justify-content-md-center" style="text-align: center; width: 100%">
-        <div class="col">
-            <a href="http://127.0.0.1:5000/binarytoplanner/" target="_blank" class="btn">Want to take a quick break from studying and talk to your friends in binary? Click here!</a>
-            <a href="http://127.0.0.1:5000/weatherapi2/" target="_blank" class="btn">What to wear..</a>
-        </div>
-    </div>
-<!--    <a class="btn btn-primary" href="http://127.0.0.1:5000/binarytoplanner/">Want to take a quick break from studying and talk to your friends in binary? Click here!</a>-->
-<!--    </div>-->
-<!--    <a class="btn btn-secondary" href="http://127.0.0.1:5000/weatherapi2/">What to wear...</a>-->
-<!--    </div>-->
