hopefully everything works

--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -87,20 +87,35 @@
     </div>
     <br>
     <br>
-    <h2 class="text-center">Journals</h2>
-    <div class="container"></div>
+    <h2 class="text-center">PBL</h2>
+    <div class="container">
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
-            <div class="col-2">
+            <div class="col-3">
+                <a href="http://127.0.0.1:5000/planner3" class="btn">Monthly Planner</a>
+            </div>
+            <div class="col-3">
+                <a href="http://127.0.0.1:5000/plannerwkly" class="btn">Weekly Planner</a>
+            </div>
+            <div class="col-3">
+                <a href="http://127.0.0.1:5000/plannerwork" class="btn">Work Planner</a>
+            </div>
+        </div>
+    </div>
+    <br>
+    <h2 class="text-center">Journals</h2>
+    <div class="container">
+        <div class="row justify-content-md-center" style="text-align: center; width: 100%">
+            <div class="col-3">
                 <a href="https://docs.google.com/document/d/1Kcb8k2XW2PODSQW_EKFYb1XKB39VrwB-OEAnCMM7Frs/edit?usp=sharing" target="_blank" class="btn">Michael & James</a>
             </div>
-            <div class="col-2">
+            <div class="col-3">
                 <a href="https://docs.google.com/document/d/1-AS5NcpL8dvRFaj1oww0tR8XM1lf20oFSDFuEdq7OxQ/edit?usp=sharing" target="_blank" class="btn">Ethan & Anirudh</a>
             </div>
         </div>
     </div>
     <br>
     <h2 class="text-center">Important Links</h2>
-    <div class="container"></div>
+    <div class="container">
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
             <div class="col">
                 <a href="https://github.com/NastyEthan/NastyReturned" target="_blank" class="btn">REPOSITORY</a>
